--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "prisma migrate deploy && next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postbuild": "next-sitemap",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "next": "15.5.0",
+    "next-seo": "^6.8.0",
+    "next-sitemap": "^4.2.3",
     "prisma": "^6.15.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-router-dom": "^7.8.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
